server/build/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-boilerplate-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx-private
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
spec:
  rules:
  - http:
      paths:
      - path: /api/templates
        backend:
          serviceName: go-boilerplate-template-service
          servicePort: 8080
  tls:
  - hosts:
      - holymagingmages.com
    secretName: go-boilerplate-cert
